add connect to APIs

--- a/src/components/RegisterForm/RegisterForm.scss
+++ b/src/components/RegisterForm/RegisterForm.scss
@@ -12,7 +12,7 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
-#passwordInput {
+#passwordInput, #firstNameInput, #lastNameInput {
     border-radius: 0;
 }
 #repeatPasswordInput {
